infra/gitops/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: group-3-prod
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: api
  type: ClusterIP
